
Version Next

    - Fix character encoding bug in pobj package (always use UTF-8)
    - Fixed bug in StringEncoder.enquote(byte[]) when non-zero offset
    - Update vaadin7 package for 7.0.0.beta11
    - Added VaadinUtil.assertSession()

Version 1.0.592 Released December 14, 2012

    - Add default constructors to Abstract{Simple,Query}Container hierarchy
    - Fixed bug in SpringXSLPersistentObjectSchemaUpdate.setParameters()
    - Add DelayedAction support for use with a Lock; add VaadinDelayedAction
    - Fixed broken maven dependencies in the Vaadin add-on (issue #15)
    - Fixed bug in AbstractDAO.getAll()

Version 1.0.571 Released November 27, 2012

    - Vaadin7: fix bug that broke VaadinApplication.get() when subclassed
    - Vaadin7: remove workaround for Vaadin bug #9946, which is now fixed
    - Update AstractDAO to use EntityManager directly (issue #14)
    - Update vaadin7 package for 7.0.0.beta10
    - Added new class DelayedAction

Version 1.0.548 Released October 19, 2012

    - Update vaadin7 package for 7.0.0.beta5
    - Added ThreadLocalContext.wrap()
    - Added new method @VaadinConfigurable.ifApplicationNotLocked()
    - Added new class ErrorAction
    - Added new class HibernateIsolationJpaDialect
    - Added new method ThreadLocalContext.invokeWith()
    - Added trace and debug level logging to ThreadLocalContext
    - Fixed bug in AnnotatedXMLEventWriter when namespaces used
    - Changed AbstractQueryContainer to make it more easily scalable
      NOTE: backward-incompatible change.

Version 1.0.507 Released August 28, 2012

    - Fixed bug in AbstractSimpleContainer when reloading from scratch
    - Fixed missing class in Vaadin add-on (issue #12)
    - Added ProcessRunner

Version 1.0.497 Released August 24, 2012

    - Vaadin7: fixed bug preventing ContextApplication.showError() from working
    - Vaadin7: Call Application.setCurrent() in ContextApplication.invoke()