@@ -1,0 +1,8 @@
+-- $Id$
+
+CREATE TABLE SchemaUpdate (
+   updateName VARCHAR2(255 char) NOT NULL,
+   updateTime TIMESTAMP NOT NULL,
+   PRIMARY KEY (updateName)
+)
+
